--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,15 +1,15 @@
-@font-face {
+@font-face
   font-family: 'icon'
-  src:  url('fonts/icon.eot?9qlw8i')
-  src:  url('fonts/icon.eot?9qlw8i#iefix') format('embedded-opentype'),
-    url('fonts/icon.ttf?9qlw8i') format('truetype'),
-    url('fonts/icon.woff?9qlw8i') format('woff'),
-    url('fonts/icon.svg?9qlw8i#icon') format('svg')
+  src:  url('../fonts/icon.eot?9qlw8i')
+  src:  url('../fonts/icon.eot?9qlw8i#iefix') format('embedded-opentype'),
+    url('../fonts/icon.ttf?9qlw8i') format('truetype'),
+    url('../fonts/icon.woff?9qlw8i') format('woff'),
+    url('../fonts/icon.svg?9qlw8i#icon') format('svg')
   font-weight: normal
   font-style: normal
 
 
-[class^="icon-"], [class*=" icon-"] 
+[class^="icon-"], [class*=" icon-"]
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icon' !important
   speak: none
@@ -24,62 +24,62 @@
   -moz-osx-font-smoothing: grayscale
 
 
-.icon-add_circle:before 
+.icon-add_circle:before
   content: "\e900"
 
-.icon-arrow_lift:before 
+.icon-arrow_lift:before
   content: "\e901"
 
-.icon-check_circle:before 
+.icon-check_circle:before
   content: "\e902"
 
-.icon-close:before 
+.icon-close:before
   content: "\e903"
 
-.icon-favorite:before 
+.icon-favorite:before
   content: "\e904"
 
-.icon-keyboard_arrow_right:before 
+.icon-keyboard_arrow_right:before
   content: "\e905"
 
-.icon-remove_circle_outline:before 
+.icon-remove_circle_outline:before
   content: "\e906"
 
-.icon-shopping_cart:before 
+.icon-shopping_cart:before
   content: "\e907"
 
-.icon-thumb_down:before 
+.icon-thumb_down:before
   content: "\e908"
 
-.icon-thumb_up:before 
+.icon-thumb_up:before
   content: "\e909"
 
-.icon-add_circle2:before 
+.icon-add_circle2:before
   content: "\e90a"
 
-.icon-arrow_lift2:before 
+.icon-arrow_lift2:before
   content: "\e90b"
 
-.icon-check_circle2:before 
+.icon-check_circle2:before
   content: "\e90c"
 
-.icon-close2:before 
+.icon-close2:before
   content: "\e90d"
 
-.icon-favorite2:before 
+.icon-favorite2:before
   content: "\e90e"
 
-.icon-keyboard_arrow_right2:before 
+.icon-keyboard_arrow_right2:before
   content: "\e90f"
 
-.icon-remove_circle_outline2:before 
+.icon-remove_circle_outline2:before
   content: "\e910"
 
-.icon-shopping_cart2:before 
+.icon-shopping_cart2:before
   content: "\e911"
 
-.icon-thumb_down2:before 
+.icon-thumb_down2:before
   content: "\e912"
 
-.icon-thumb_up2:before 
+.icon-thumb_up2:before
   content: "\e913"
