--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -12,3 +12,12 @@ body, html
     &::after
       -webkit-transform: scaleY(0.5)
       transform: scaleY(0.5)
+.clear-fix
+  display: inline-block
+  &.after
+    display: block
+    content: ' '
+    height: 0
+    line-height: 0
+    clear: both
+    visibility: hidden
